network-polices/external-dns.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-dns-policy
  namespace: external-dns
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - toFQDNs:
        - matchName: "route53.amazonaws.com"
      toPorts:
        - ports:
            - port: "443"
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
