network-polices/nginx-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nginx-ingress-policy
  namespace: nginx-ingress
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: nginx-ingress
      toPorts:
        - ports:
            - port: "8080"
    - fromEntities:
        - remote-node
      toPorts:
        - ports:
            - port: "80"
        - ports:
            - port: "443"
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "8443"
        - ports:
            - port: "6443"
    - fromCIDRSet:
        - cidr: 192.168.0.0/24
      toPorts:
        - ports:
            - port: "80"
        - ports:
            - port: "443"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: webapp
      toPorts:
        - ports:
            - port: "8080"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: wordpress
      toPorts:
        - ports:
            - port: "8080"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/component: default-backend
      toPorts:
        - ports:
            - port: "8080"
